MLW Foreign Policy Branch
migrated more content, final stretch for fopol

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -5,6 +5,226 @@
  SADC_AGRI_idea_1_TT: "When influenced by a member of the §YSADC§! who is within the §Y$AGRI_SADC_idea$§!, §Y[THIS.GetFlag] [THIS.GetAdjective]§! $foreign_influence_defense_modifier$ is §Rdecreased§! by §R5%§!\n"
  SADC_AGRI_idea_2_TT: "\nWhen influencing a member of the §YSADC§! who is within the §Y$AGRI_SADC_idea$§!, §Y[THIS.GetFlag] [THIS.GetAdjective]§! $foreign_influence_modifier$ is §Gincreased§! by §G5%§!\n"
 
+ # DYNAMIC MODIFIERS
+ MLW_GCC_DM: "Malawian-Gulf Relations"
+ MLW_GCC_DM_desc: "Whilst the Gulf states are far from our borders, we have plenty of ties economically and culturally between us, the Gulf states are a wealthy region with plenty of oil that are vitally necessary for our burgeoning economy and a good place for potential employment options for many Malawians to send their wages home."
+ MLW_two_chinas_DM: "The Two Chinas"
+ MLW_two_chinas_DM_desc: ""
+
+
+ # FOCUSES
+ # FOREIGN POLICY
+ MLW_our_place: "Our Place in the World"
+ MLW_our_place_desc: ""
+ # AFRICA
+ MLW_local_connections: "Local Connections"
+ MLW_local_connections_desc: ""
+ # SOUTH AFRICA
+ MLW_SAF_relations: "South Africa"
+ MLW_SAF_relations_desc: ""
+
+ # MLW_SAF_security_operations: "Security Co-operation"
+ # MLW_SAF_security_operations_desc: ""
+
+ # MLW_SAF_training_together: "Training Together"
+ # MLW_SAF_training_together_desc: ""
+
+ # MLW_SAF_anti_poaching: "South African Anti-Poaching Patrols"
+ # MLW_SAF_anti_poaching_desc: ""
+
+ # MLW_SAF_pan_african_army: "Pan-African Fighting Force"
+ # MLW_SAF_pan_african_army_desc: ""
+
+ # MLW_SAF_make_amends: "Making Amends from Banda's Reign"
+ # MLW_SAF_make_amends_desc: ""
+
+ # MLW_SAF_deepen_brotherhood: "Deepen African Brotherhood"
+ # MLW_SAF_deepen_brotherhood_desc: ""
+
+ # MLW_SAF_work_in_SA: "Send Workers to South Africa"
+ # MLW_SAF_work_in_SA_desc: ""
+
+ # MLW_SAF_ignore_work_permits: "Ignore Work Permit Restrictions"
+ # MLW_SAF_ignore_work_permits_desc: ""
+
+ # MLW_SAF_under_the_table: "Work Under the Table"
+ # MLW_SAF_under_the_table_desc: ""
+
+ # MLW_SAF_undercut_locals: "Undercut the Locals"
+ # MLW_SAF_undercut_locals_desc: ""
+
+ # MLW_SAF_black_market_deals: "Black Market Deals"
+ # MLW_SAF_black_market_deals_desc: ""
+
+ # MLW_SAF_respect_work_permits: "Respect the Work Permit Restrictions"
+ # MLW_SAF_respect_work_permits_desc: ""
+
+ # MLW_SAF_jobs_for_SA: "Offer Jobs to South Africans"
+ # MLW_SAF_jobs_for_SA_desc: ""
+
+ # MLW_SAF_skilled_jobs_for_SA: "Employ Skilled South Africans"
+ # MLW_SAF_skilled_jobs_for_SA_desc: ""
+
+ # MLW_SAF_cooperation: "Continued Co-operation with South Africa"
+ # MLW_SAF_cooperation_desc: ""
+
+ # AFRICAN UNION
+ # MLW_the_continent: "The Continent"
+ # MLW_the_continent_desc: ""
+
+ # MLW_pan_african_stance: "A Pan-African Stance"
+ # MLW_pan_african_stance_desc: ""
+
+ # MLW_nationalist_stance: "A Nationalist Stance"
+ # MLW_nationalist_stance_desc: ""
+
+ # MLW_AU_cooperation: "Co-operation in The African Union"
+ # MLW_AU_cooperation_desc: ""
+
+ # NEIGHBOURING NATIONS
+ MLW_our_neighbours: "Our Neighbours"
+ MLW_our_neighbours_desc: ""
+
+ # MLW_malawi_rail_building: "Cross Border Rail Building"
+ # MLW_malawi_rail_building_desc: ""
+
+ # MOZAMBIQUE
+ MLW_MOZ_relations: "Mozambique"
+ MLW_MOZ_relations_desc: ""
+
+ # MLW_MOZ_refugees: "Mozambican Refugees"
+ # MLW_MOZ_refugees_desc: ""
+
+ # MLW_MOZ_issue_of_the_isles: "The Issue of the Islands"
+ # MLW_MOZ_issue_of_the_isles_desc: ""
+
+ # MLW_MOZ_not_listening: "They're Not Listening to Us"
+ # MLW_MOZ_not_listening_desc: ""
+
+ # MLW_MOZ_settle_the_debate: "Settle the Debate"
+ # MLW_MOZ_settle_the_debate_desc: ""
+
+ # TANZANIA
+ MLW_TNZ_relations: "Tanzania"
+ MLW_TNZ_relations_desc: ""
+
+ # MLW_TNZ_nyaja_malawi: "Lake Malawi, Not Lake Tanzania"
+ # MLW_TNZ_nyaja_malawi_desc: ""
+
+ # MLW_TNZ_solidify_holdings: "Solidify Our Grip on the Lakeside"
+ # MLW_TNZ_solidify_holdings_desc: ""
+
+ # MLW_TNZ_formal_borders: "Formalise the Borders"
+ # MLW_TNZ_formal_borders_desc: ""
+
+ # MLW_TNZ_coownership: "Co-ownership of the Lake"
+ # MLW_TNZ_coownership_desc: ""
+
+ # ZAMBIA
+ MLW_ZAM_relations: "Zambia"
+ MLW_ZAM_relations_desc: ""
+
+ # MLW_ZAM_shared_history: "A Shared History"
+ # MLW_ZAM_shared_history_desc: ""
+
+ # MLW_ZAM_diaspora: "Malawian Diaspora"
+ # MLW_ZAM_diaspora_desc: ""
+
+ # MLW_ZAM_blur_the_border: "Blurring the Border"
+ # MLW_ZAM_blur_the_border_desc: ""
+
+ # MLW_ZAM_brother_state: "Our Brother State"
+ # MLW_ZAM_brother_state_desc: ""
+
+ # MLW_ZAM_maintain_JPCC: "Maintain the JPCC"
+ # MLW_ZAM_maintain_JPCC_desc: ""
+
+ # MLW_ZAM_troop_coordination: "Train with Zambian Troops"
+ # MLW_ZAM_troop_coordination_desc: ""
+
+ # MLW_ZAM_border_security: "Assist Zambia with Border Security"
+ # MLW_ZAM_border_security_desc: ""
+
+ # MLW_ZAM_wargames: "Wargames with Zambia"
+ # MLW_ZAM_wargames_desc: ""
+
+
+ # SADC
+ # MLW_SADC_trade_efforts: "Trade With the SADC"
+ # MLW_SADC_trade_efforts_desc: ""
+
+ # MLW_SADC_farming_the_wealth: "Farming the Wealth"
+ # MLW_SADC_farming_the_wealth_desc: ""
+
+ # MLW_SADC_smoking_the_competition: "Smoking the Competition"
+ # MLW_SADC_smoking_the_competition_desc: ""
+
+ # MLW_SADC_sweet_deals: "Sweet Deals"
+ # MLW_SADC_sweet_deals_desc: ""
+
+ # MLW_SADC_building_each_other: "Building Each Other Up"
+ # MLW_SADC_building_each_other_desc: ""
+
+ # MLW_SADC_raw_materials: "Raw Materials"
+ # MLW_SADC_raw_materials_desc: ""
+
+ # MLW_SADC_construction_team: "MSCC SADC Division"
+ # MLW_SADC_construction_team_desc: ""
+
+ # MLW_SADC_luxury_goods: "Luxury Goods"
+ # MLW_SADC_luxury_goods_desc: ""
+
+ # MLW_SADC_consumer_goods: "Consumer Goods"
+ # MLW_SADC_consumer_goods_desc: ""
+
+ # MLW_SADC_regional_mzuzu: "Take Mzuzu Motors Regional"
+ # MLW_SADC_regional_mzuzu_desc: ""
+
+
+
+
+
+ # THE WEST
+ MLW_our_historical_allies: "Our Historical Allies"
+ MLW_our_historical_allies_desc: ""
+
+ # COLONISERS
+ MLW_colonial_masters: "Former Colonial Masters"
+ MLW_colonial_masters_desc: ""
+
+ # MLW_ENG_investments: "United Kingdom"
+ # MLW_ENG_investments_desc: ""
+
+ # MLW_EUU_delegation: "Send a Delegation to the EU"
+ # MLW_EUU_delegation_desc: ""
+
+ # MLW_FRA_investments: "France"
+ # MLW_FRA_investments_desc: ""
+
+ # MLW_POR_investments: "Portugal"
+ # MLW_POR_investments_desc: ""
+
+ # MLW_BEL_investments: "Belgium"
+ # MLW_BEL_investments_desc: ""
+
+ # MLW_equal_footing: "Working on Equal Footing"
+ # MLW_equal_footing_desc: ""
+
+ # USA
+ # MLW_western_hegemony: "The Western Hegemony"
+ # MLW_western_hegemony_desc: ""
+
+ # MLW_USA_attract_investors: "Attract American Investors"
+ # MLW_USA_attract_investors_desc: ""
+
+ MLW_USA_christian_money: "Accept Christian Money"
+ MLW_USA_christian_money_desc: ""
+
+ MLW_USA_USAID: "Request USAID"
+ MLW_USA_USAID_desc: ""
+
+ # MLW_USA_imports: "Ramp Up Imports"
+ # MLW_USA_imports_desc: ""
 
 
 
@@ -16,6 +236,163 @@
 
 
 
+
+
+ # THE EAST
+ MLW_a_toast_to_our_future: "A Toast to Our Future"
+ MLW_a_toast_to_our_future_desc: ""
+
+ # ASIA
+ MLW_looking_to_asia: "Looking to Asia"
+ MLW_looking_to_asia_desc: ""
+ # INDIA
+ MLW_india: "India"
+ MLW_india_desc: ""
+
+ MLW_medical_aid: "Medical Aid"
+ MLW_medical_aid_desc: ""
+
+ MLW_indian_agricultural_assistance: "Agricultural Assistance"
+ MLW_indian_agricultural_assistance_desc: ""
+
+ MLW_indian_supplies_to_domestic: "Supplying Our Domestic Production"
+ MLW_indian_supplies_to_domestic_desc: ""
+
+ # THE 2 CHINAS
+ MLW_the_two_chinas: "The Two Chinas"
+ MLW_the_two_chinas_desc: ""
+
+ # PR CHINA
+ MLW_prc_buddies: "Following the Continent"
+ MLW_prc_buddies_desc: ""
+
+ MLW_prc_rail_investments: "PRC Rail Investments"
+ MLW_prc_rail_investments_desc: ""
+
+ MLW_prc_building_materials: "PRC Building Materials"
+ MLW_prc_building_materials_desc: ""
+
+ # MLW_ally_with_prc: "Allying with the PRC"
+ # MLW_ally_with_prc_desc: ""
+
+ # MLW_no_taiwan: "Refuse to Acknowledge Taiwan"
+ # MLW_no_taiwan_desc: ""
+
+ # TAIWAN
+ MLW_taiwan_buddies: "Maintaining Ties to Taiwan"
+ MLW_taiwan_buddies_desc: ""
+
+ MLW_taiwan_electronics: "Import Taiwanese Electronics"
+ MLW_taiwan_electronics_desc: ""
+
+ # MLW_taiwan_mzuzu_parts: "Obtain Parts for Mzuzu Motors"
+ # MLW_taiwan_mzuzu_parts_desc: ""
+
+ # MLW_ally_with_taiwan: "Allying with Taiwan"
+ # MLW_ally_with_taiwan_desc: ""
+
+ # MLW_no_prc: "Refuse to Acknowledge PRC"
+ # MLW_no_prc_desc: ""
+
+ # BRIDGING THE GAP
+ # MLW_bridging_the_gap: "Bridging the Gap"
+ # MLW_bridging_the_gap_desc: ""
+
+ # JAPAN
+ MLW_japan: "Japan"
+ MLW_japan_desc: ""
+
+ # MLW_importing_toyotas: "Importing Toyotas"
+ # MLW_importing_toyotas_desc: ""
+
+ # MLW_japanese_construction_vehicles: "Buying Up Kubotas"
+ # MLW_japanese_construction_vehicles_desc: ""
+
+ # MLW_toyota_offices: "Toyota's Malawi Office"
+ # MLW_toyota_offices_desc: ""
+
+
+
+
+ # ARAB WORLD
+ MLW_the_arab_world: "The Arab World"
+ MLW_the_arab_world_desc: ""
+
+ MLW_gcc_petrochemicals: "Petrochemical Trading"
+ MLW_gcc_petrochemicals_desc: ""
+
+ MLW_gcc_fertilizer: "Fertilizer Sales"
+ MLW_gcc_fertilizer_desc: ""
+
+ MLW_gcc_megaprojects: "Megaprojects in the Gulf"
+ MLW_gcc_megaprojects_desc: ""
+
+ # MLW_gcc_deepen_relations: "Deepen Relations in the Gulf"
+ # MLW_gcc_deepen_relations_desc: ""
+
+ # MLW_gcc_constructors: "MSCC Gulf Office"
+ # MLW_gcc_constructors_desc: ""
+
+ # MLW_gcc_mining_rights: "Allow GCC Members Mining Permits"
+ # MLW_gcc_mining_rights_desc: ""
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ # EVENTS
+ MLW_FOPOL_GCC.1.t: "Malawi Announces a Construction Conglomerate"
+ MLW_FOPOL_GCC.1.d: "Today the Malawian government announced plans to form and subsidise a large conglomerate of construction companies under the awning of their newly formed \"Malawi State Construction Company\", better known as the \"MSCC\".\nThe government hopes to provide teams ready to work across the SADC and Gulf States in the foreseeable future."
+ MLW_FOPOL_GCC.1.O1: "We will build the new Millennium!"
+ MLW_FOPOL_GCC.1.O2: "Hopefully we can hire them soon."
+ MLW_FOPOL_GCC.1.O3: "We'll hire a team or two soon!"
+
+
+
+
+
+
+
+ # COST TOOLTIPS
+ MLW_workers_GCC_COST: "£treasury [?MLW_GCC_worker_cost|3]"
+ MLW_workers_GCC_COST_blocked: "£treasury [?MLW_GCC_worker_cost|R3]"
+ MLW_workers_GCC_COST_tooltip: "The hiring of [MLW.GetFlag] [MLW.GetAdjective] workers will cost approximately $$[?MLW_GCC_worker_cost|Y3] §Hbillion§!"
+
+
+ # FOCUS TOOLTIPS
+ MLW_the_arab_world_TT: "Will add the §Y$MLW_GCC_DM$§! dynamic modifier, which is used to show the deepening relations between the §YGulf§! nations and §YMalawi§!"
+ MLW_gcc_megaprojects_TT: "Earnings per construction team hired will vary depending on §Ycorruption level§!, the lower the level of corruption, the more money will make its way to the treasury unimpeded."
+
+
+ # GCC EFFECT TOOLTIPS
+ MLW_GCC_power_plant_fuel_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$fossil_pp_fuel_consumption_modifier$§! by [?DM_fossil_fuel_fuel_use_change|%-2] (Current: [?MLW_gcc_power_plant_fuel|%Y2])"
+ MLW_GCC_agri_productivity_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$agricolture_productivity_modifier$§! by [?DM_agri_productivity_change|%+2] (Current: [?MLW_gcc_agri_productivity|%Y2])"
+ MLW_GCC_agri_workers_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$agriculture_workers_modifier$§! by [?DM_agri_workers_change|%-2] (Current: [?MLW_gcc_agri_workers|%Y2])"
+ MLW_GCC_agri_dist_workers_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$agriculture_district_worker_requirement_modifier$§! by [?DM_agri_workers_change|%-2] (Current: [?MLW_gcc_agri_dist_workers|%Y2])"
+ MLW_GCC_agri_tax_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$agriculture_tax_modifier$§! by [?DM_agri_tax_change|%+2] (Current: [?MLW_gcc_agri_tax|%Y2])"
+ MLW_GCC_agri_dist_tax_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$agriculture_district_income_tax_modifier$§! by [?DM_agri_tax_change|%+2] (Current: [?MLW_gcc_agri_dist_tax|%Y2])"
+ MLW_GCC_total_productivity_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$country_productivity_growth_modifier$§! by [?DM_productivity_change|%+2] (Current: [?MLW_gcc_total_productivity|%Y2])"
+ MLW_GCC_construction_speed_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$§! by [?DM_construction_speed_change|%+2] (Current: [?MLW_gcc_construction_speed|%Y2])"
+ MLW_GCC_foreign_influence_attack_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$foreign_influence_modifier$§! by [?DM_foreign_influence_OFF_change|%+2] (Current: [?MLW_gcc_foreign_influence_attack|%Y2])"
+ MLW_GCC_foreign_influence_defence_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$foreign_influence_defense_modifier$§! by [?DM_foreign_influence_DEF_change|%+2] (Current: [?MLW_gcc_foreign_influence_defence|%Y2])"
+ MLW_GCC_fascism_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$fascism_acceptance$§! by [?DM_fascism_acceptance_change|%+2] (Current: [?MLW_gcc_salafism|%Y2])"
+ MLW_GCC_neutrality_acceptance_tt: "Modifies §Y$MLW_GCC_DM$§!: §Y$neutrality_acceptance$§! by [?DM_neutrality_acceptance_change|%+2] (Current: [?MLW_gcc_neutrality|%Y2])"
+
+ # TWO CHINAS EFFECT TOOLTIPS
+ MLW_2C_rail_construction_speed_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$MODIFIER_production_speed_rail_way_factor$§! by [?DM_rail_construction_speed_change|%+2] (Current: [?MLW_2C_rail_speed|%Y2])"
+ MLW_2C_steel_stockpile_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$country_resource_steel$§! by [?DM_steel_stockpile_change|+0] (Current: [?MLW_2C_steel_stockpile|Y0])"
+ MLW_2C_research_speed_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$MODIFIER_RESEARCH_SPEED_FACTOR$§! by [?DM_research_speed_change|%+2] (Current: [?MLW_2C_research_speed|%Y2])"
+ MLW_2C_aluminium_stockpile_tt: "Modifies §Y$MLW_two_chinas_DM$§!: §Y$country_resource_aluminium$§! by [?DM_aluminium_stockpile_change|+0] (Current: [?MLW_2C_aluminium_stockpile|Y0])"
 
 
 
